Add monitor tester utility

--- a/arcade/index.html
+++ b/arcade/index.html
@@ -1,7 +1,6 @@
 ---
 layout: page
-section: Arcade
+section: WebApps
 ---
 {% assign entries = site.categories.arcade %}
 {% include posts.html %}
-
